Apply JMH.